...
export const buildingImages = {
  // SGW campus
  H: require('../assets/buildings/SGWImages/hBuilding.png'),
  JW: require('../assets/buildings/SGWImages/gnBuilding.png'),
  VA: require('../assets/buildings/SGWImages/vaBuilding.png'),
  EV: require('../assets/buildings/SGWImages/evBuilding.png'),
  GN: require('../assets/buildings/SGWImages/gnBuilding.png'),
  FG: require('../assets/buildings/SGWImages/fgBuilding.png'),
  CL: require('../assets/buildings/SGWImages/clBuilding.png'),
  TD: require('../assets/buildings/SGWImages/tdBuilding.png'),
  MB: require('../assets/buildings/SGWImages/mbBuilding.png'),
  GM: require('../assets/buildings/SGWImages/gmBuilding.png'),
  LS: require('../assets/buildings/SGWImages/lsBuilding.png'),
...
