appId: host.exp.exponent
---
- tapOn: Skip
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: mapRef
    timeout: 15000
- tapOn:
    id: "menu-button"
- tapOn: Direction
- waitForAnimationToEnd
- assertVisible: "Plan Your Trip"
- tapOn:
    id: "inputStartLoc"
- waitForAnimationToEnd
- assertVisible: "Set to Your Location"
- tapOn: "Set to Your Location"
- tapOn:
    text: "While using the app"
    optional: true
- extendedWaitUntil:
    visible:
      id: "inputStartLoc"
    timeout: 10000
- tapOn:
    id: "inputDestLoc"
- inputText:
    text: "hall"
- waitForAnimationToEnd
- tapOn: "Hall Building"
- waitForAnimationToEnd
- assertVisible: "Hall Building"